[package]
name = "fleet-bottle"
version = "0.1.0"
edition = "2021"
description = "Bottle protocol: inter-agent messaging for the SuperInstance fleet"
license = "MIT"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
